# hearth-OLMo

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
configs/: eval_common.yaml  olmes_olmo3_base.txt  olmes_olmo3_base_easy.txt  olmes_olmo3_heldout.txt  train_olmo3_1b.yaml  train_olmo3_1b_wikitext2_probe.yaml  train_olmo3_370m.yaml  train_olmo3_370m_fsdp_smoke.yaml  train_olmo3_370m_wikitext2.yaml  train_olmo3_3b.yaml  train_olmo3_3b_wikitext2_probe.yaml
data/manifests/: dolma3_150b_pilot_files.json  olmo3_dolma_smoke.json
docs/: dependency_strategy.md
patches/olmo-core/: README.md  torch26-default-save-planner.patch
reports/: mainline_1b_3b_status.md
scripts/: collect_olmes_results.py  collect_results.py  convert_core_to_hf.py  download_files.py  eval_hf_model.py  prepare_text_data.py  run_olmes.py  run_prepare_dolma3_150b_pilot.sh  run_reproduction.py  train_olmo3.py
